control section iniialized

--- a/index.html
+++ b/index.html
@@ -20,5 +20,22 @@
         <section class="section sec4 blogs"></section>
         <section class="section sec5 contact"></section>
     </main>
+    <div class="controlls">
+        <div class="control control-1 active-btn">
+            <i class="fa-solid fa-house"></i>
+        </div>
+        <div class="control control-2">
+            <i class="fa-solid fa-user"></i>
+        </div>
+        <div class="control control-3">
+            <i class="fa-solid fa-briefcase"></i>
+        </div>
+        <div class="control control-4">
+            <i class="fa-solid fa-newspaper"></i>
+        </div>
+        <div class="control control-5">
+            <i class="fa-solid fa-envelope-open"></i>
+        </div>
+    </div>
 </body>
 </html>
