--- a/index.html
+++ b/index.html
@@ -37,5 +37,6 @@
             <i class="fa-solid fa-envelope-open"></i>
         </div>
     </div>
+    <script src="./app.js"></script>
 </body>
 </html>
