section animation and header content started

--- a/index.html
+++ b/index.html
@@ -12,7 +12,27 @@
 </head>
 <body class="main-content">
     <header class="section sec1 header active" id="home">
-        
+        <div class="header-content">
+            <div class="left-header">
+                <div class="h-shape"></div>
+                <div class="image">
+                    <img src="" alt="My Image">
+                </div>
+            </div>
+            <div class="right-header">
+                <h1 class="name">
+                    Hi, I'm <span>Naimul Hasan Sabbir</span>
+                    A Software Engineer.
+                </h1>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt totam tenetur in itaque recusandae qui perspiciatis provident, libero doloremque doloribus.
+                </p>
+                <a href="" class="main-btn">
+                    <span class="btn-text">Download CV</span>
+                    <span class="btn-icon"><i class="fas fa-download"></i></span>
+                </a>
+            </div>
+        </div>
     </header>
     <main>
         <section class="section sec2 about" id="about"></section>
