--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="left-header">
                 <div class="h-shape"></div>
                 <div class="image">
-                    <img src="" alt="My Image">
+                    <img src="./img/my_image.png" alt="My Image">
                 </div>
             </div>
             <div class="right-header">
