--- a/index.html
+++ b/index.html
@@ -27,10 +27,12 @@
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt totam tenetur in itaque recusandae qui perspiciatis provident, libero doloremque doloribus.
                 </p>
-                <a href="" class="main-btn">
-                    <span class="btn-text">Download CV</span>
-                    <span class="btn-icon"><i class="fas fa-download"></i></span>
-                </a>
+                <div class="btn-con">
+                    <a href="" class="main-btn">
+                        <span class="btn-text">Download CV</span>
+                        <span class="btn-icon"><i class="fas fa-download"></i></span>
+                    </a>
+                </div>
             </div>
         </div>
     </header>
