--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <main>
         <section class="section sec2 about" id="about">
             <div class="main-title">
-                <h2>About <span>me</span><span class="bg-text">my status</span></h2>
+                <h2>About <span>me</span><span class="bg-text">my stats</span></h2>
             </div>
         </section>
         <section class="section sec3 portfolio" id="portfolio"></section>
