--- a/index.html
+++ b/index.html
@@ -1,68 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
-    <link rel="stylesheet" href="./styles/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap" rel="stylesheet">
-</head>
-<body class="main-content">
+    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body class="main-content">
     <header class="section sec1 header active" id="home">
-        <div class="header-content">
-            <div class="left-header">
-                <div class="h-shape"></div>
-                <div class="image">
-                    <img src="./img/my_image.png" alt="My Image">
-                </div>
-            </div>
-            <div class="right-header">
-                <h1 class="name">
-                    Hi, I'm <span>Naimul Hasan Sabbir</span>
-                    A Software Engineer.
-                </h1>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt totam tenetur in itaque recusandae qui perspiciatis provident, libero doloremque doloribus.
-                </p>
-                <div class="btn-con">
-                    <a href="" class="main-btn">
-                        <span class="btn-text">Download CV</span>
-                        <span class="btn-icon"><i class="fas fa-download"></i></span>
-                    </a>
-                </div>
-            </div>
+      <div class="header-content">
+        <div class="left-header">
+          <div class="h-shape"></div>
+          <div class="image">
+            <img src="./img/my_image.png" alt="My Image" />
+          </div>
         </div>
+        <div class="right-header">
+          <h1 class="name">
+            Hi, I'm <span>Naimul Hasan Sabbir</span>
+            A Software Engineer.
+          </h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt
+            totam tenetur in itaque recusandae qui perspiciatis provident,
+            libero doloremque doloribus.
+          </p>
+          <div class="btn-con">
+            <a href="" class="main-btn">
+              <span class="btn-text">Download CV</span>
+              <span class="btn-icon"><i class="fas fa-download"></i></span>
+            </a>
+          </div>
+        </div>
+      </div>
     </header>
     <main>
-        <section class="section sec2 about" id="about">
-            <div class="main-title">
-                <h2>About <span>me</span><span class="bg-text">my stats</span></h2>
+      <section class="section sec2 about" id="about">
+        <div class="main-title">
+          <h2>About <span>me</span><span class="bg-text">my stats</span></h2>
+        </div>
+        <div class="about-container">
+          <div class="left-about">
+            <h4>Information About Me</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias
+              deserunt labore aliquam, distinctio recusandae necessitatibus
+              libero perferendis ipsa quidem blanditiis eius error excepturi,
+              quam facere minus, cum vero doloremque reiciendis. Placeat
+              adipisci deserunt dolorum iusto in vel voluptatem tenetur
+              exercitationem distinctio ut? Libero rem, exercitationem expedita
+              dignissimos earum voluptatum? Dolor molestiae vitae animi nulla
+              consectetur modi sunt voluptas. Accusantium enim voluptatibus,
+              laboriosam quasi illum corrupti quas aliquid. Reiciendis incidunt
+              eveniet sequi ipsam earum modi error tenetur quidem, commodi odio
+              culpa.
+            </p>
+            <div class="btn-con">
+              <a href="#" class="main-btn">
+                <span class="btn-text">Download CV</span>
+                <span class="btn-icon"><i class="fas fa-download"></i></span>
+              </a>
             </div>
-        </section>
-        <section class="section sec3 portfolio" id="portfolio"></section>
-        <section class="section sec4 blogs" id="blogs"></section>
-        <section class="section sec5 contact" id="contact"></section>
+          </div>
+          <div class="right-about"></div>
+        </div>
+      </section>
+      <section class="section sec3 portfolio" id="portfolio"></section>
+      <section class="section sec4 blogs" id="blogs"></section>
+      <section class="section sec5 contact" id="contact"></section>
     </main>
     <div class="controlls">
-        <div class="control control-1 active-btn" data-id="home">
-            <i class="fa-solid fa-house"></i>
-        </div>
-        <div class="control control-2" data-id="about">
-            <i class="fa-solid fa-user"></i>
-        </div>
-        <div class="control control-3" data-id="portfolio">
-            <i class="fa-solid fa-briefcase"></i>
-        </div>
-        <div class="control control-4" data-id="blogs">
-            <i class="fa-solid fa-newspaper"></i>
-        </div>
-        <div class="control control-5" data-id="contact">
-            <i class="fa-solid fa-envelope-open"></i>
-        </div>
+      <div class="control control-1 active-btn" data-id="home">
+        <i class="fa-solid fa-house"></i>
+      </div>
+      <div class="control control-2" data-id="about">
+        <i class="fa-solid fa-user"></i>
+      </div>
+      <div class="control control-3" data-id="portfolio">
+        <i class="fa-solid fa-briefcase"></i>
+      </div>
+      <div class="control control-4" data-id="blogs">
+        <i class="fa-solid fa-newspaper"></i>
+      </div>
+      <div class="control control-5" data-id="contact">
+        <i class="fa-solid fa-envelope-open"></i>
+      </div>
     </div>
     <script src="./app.js"></script>
-</body>
+  </body>
 </html>
