--- a/index.html
+++ b/index.html
@@ -75,7 +75,32 @@
               </a>
             </div>
           </div>
-          <div class="right-about"></div>
+          <div class="right-about">
+            <div class="about-item">
+              <div class="abt-text">
+                <p class="large-text">560+</p>
+                <p class="small-text">Projects <br />Completed</p>
+              </div>
+            </div>
+            <div class="about-item">
+              <div class="abt-text">
+                <p class="large-text">560+</p>
+                <p class="small-text">Projects <br />Completed</p>
+              </div>
+            </div>
+            <div class="about-item">
+              <div class="abt-text">
+                <p class="large-text">560+</p>
+                <p class="small-text">Projects <br />Completed</p>
+              </div>
+            </div>
+            <div class="about-item">
+              <div class="abt-text">
+                <p class="large-text">560+</p>
+                <p class="small-text">Projects <br />Completed</p>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
       <section class="section sec3 portfolio" id="portfolio"></section>
