--- a/index.html
+++ b/index.html
@@ -56,17 +56,12 @@
           <div class="left-about">
             <h4>Information About Me</h4>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias
-              deserunt labore aliquam, distinctio recusandae necessitatibus
-              libero perferendis ipsa quidem blanditiis eius error excepturi,
-              quam facere minus, cum vero doloremque reiciendis. Placeat
-              adipisci deserunt dolorum iusto in vel voluptatem tenetur
-              exercitationem distinctio ut? Libero rem, exercitationem expedita
-              dignissimos earum voluptatum? Dolor molestiae vitae animi nulla
-              consectetur modi sunt voluptas. Accusantium enim voluptatibus,
-              laboriosam quasi illum corrupti quas aliquid. Reiciendis incidunt
-              eveniet sequi ipsam earum modi error tenetur quidem, commodi odio
-              culpa.
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis
+              perferendis quia cumque repellendus dolore temporibus, quas
+              commodi saepe quos. Voluptate molestiae placeat ex debitis cum
+              animi doloribus magnam recusandae itaque quae nihil fuga, ut
+              architecto eligendi perferendis nemo ullam iste quia cumque sit
+              eius nulla modi voluptatibus neque? Tempora, sapiente?
             </p>
             <div class="btn-con">
               <a href="#" class="main-btn">
@@ -84,8 +79,8 @@
             </div>
             <div class="about-item">
               <div class="abt-text">
-                <p class="large-text">560+</p>
-                <p class="small-text">Projects <br />Completed</p>
+                <p class="large-text">2+</p>
+                <p class="small-text">Years of <br />Experience</p>
               </div>
             </div>
             <div class="about-item">
