--- a/index.html
+++ b/index.html
@@ -296,7 +296,48 @@
           </div>
         </div>
       </section>
-      <section class="section sec4 blogs" id="blogs"></section>
+      <section class="section sec4" id="blogs">
+        <div class="blogs-content">
+          <div class="main-title">
+            <h2>My <span>Blogs</span><span class="bg-text">My Blogs</span></h2>
+          </div>
+          <div class="blogs">
+            <div class="blog">
+              <img src="./img/blog1.jpg" alt="" />
+              <div class="blog-text">
+                <h4>How To Create your Own Website</h4>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. At
+                  nesciunt esse sit repellat excepturi consequatur sequi
+                  deserunt magni optio omnis.
+                </p>
+              </div>
+            </div>
+            <div class="blog">
+              <img src="./img/blog2.jpg" alt="" />
+              <div class="blog-text">
+                <h4>How To Create your Own Website</h4>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. At
+                  nesciunt esse sit repellat excepturi consequatur sequi
+                  deserunt magni optio omnis.
+                </p>
+              </div>
+            </div>
+            <div class="blog">
+              <img src="./img/blog3.jpg" alt="" />
+              <div class="blog-text">
+                <h4>How To Create your Own Website</h4>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. At
+                  nesciunt esse sit repellat excepturi consequatur sequi
+                  deserunt magni optio omnis.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
       <section class="section sec5 contact" id="contact"></section>
     </main>
     <div class="controlls">
