--- a/index.html
+++ b/index.html
@@ -338,7 +338,108 @@
           </div>
         </div>
       </section>
-      <section class="section sec5 contact" id="contact"></section>
+      <section class="section sec5 contact" id="contact">
+        <div class="contact-container">
+          <div class="main-title">
+            <h2>Contact <span>Me</span><span class="bg-text">Contact</span></h2>
+            <div class="contact-content-con">
+              <div class="left-contact">
+                <h4>Contact me here</h4>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Libero porro pariatur reiciendis molestiae culpa architecto
+                  esse aspernatur laudantium. Veritatis, pariatur!
+                </p>
+                <div class="contact-info">
+                  <div class="contact-item">
+                    <div class="icon">
+                      <i class="fa-solid fa-map-location-dot"></i>
+                      <span>Address</span>
+                    </div>
+                    <p>
+                      <span>: Dhaka, Bangladesh</span>
+                    </p>
+                  </div>
+                  <div class="contact-item">
+                    <div class="icon">
+                      <i class="fas fa-envelope"></i>
+                      <span>Email</span>
+                    </div>
+                    <p>
+                      <span>: k.naimulislamsabbir@gmail.com</span>
+                    </p>
+                  </div>
+                  <div class="contact-item">
+                    <div class="icon">
+                      <i class="fa-solid fa-school"></i>
+                      <span>Education</span>
+                    </div>
+                    <p>
+                      <span>: BRAC University, Dhaka, Bangladesh</span>
+                    </p>
+                  </div>
+                  <div class="contact-item">
+                    <div class="icon">
+                      <i class="fa-solid fa-phone"></i>
+                      <span>Mobile Number</span>
+                    </div>
+                    <p>
+                      <span>: +880 1920820623</span>
+                    </p>
+                  </div>
+                  <div class="contact-item">
+                    <div class="icon">
+                      <i class="fas fa-globe-africa"></i>
+                      <span>Languages</span>
+                    </div>
+                    <p>
+                      <span>: Bangla, English</span>
+                    </p>
+                  </div>
+                </div>
+                <div class="contact-icons">
+                  <div class="contact-icon">
+                    <a href="www.linkedin.com" target="_blank">
+                      <i class="fa-brands fa-linkedin"></i>
+                    </a>
+                    <a href="#" target="_blank">
+                      <i class="fab fa-twitter"></i>
+                    </a>
+                    <a href="#" target="_blank">
+                      <i class="fab fa-github"></i>
+                    </a>
+                    <a href="#" target="_blank">
+                      <i class="fab fa-youtube"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+              <div class="right-contact">
+                <form action="" class="contact-form">
+                  <div class="input-control i-c-2">
+                    <input type="text" required placeholder="Your Name" />
+                    <input type="email" required placeholder="Your Email" />
+                  </div>
+                  <div class="input-control">
+                    <input type="text" required placeholder="Enter Subject" />
+                  </div>
+                  <div class="input-control">
+                    <textarea name="" id="" cols="15" rows="8"></textarea>
+                  </div>
+                  <div class="submit-btn">
+                    <a href="#" class="main-btn">
+                      <span class="btn-text">Download CV</span>
+                      <span class="btn-icon"
+                        ><i class="fas fa-download"></i
+                      ></span>
+                    </a>
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <div class="controlls">
       <div class="control control-1 active-btn" data-id="home">
