--- a/index.html
+++ b/index.html
@@ -424,13 +424,19 @@
                     <input type="text" required placeholder="Enter Subject" />
                   </div>
                   <div class="input-control">
-                    <textarea name="" id="" cols="15" rows="8"></textarea>
+                    <textarea
+                      name=""
+                      id=""
+                      cols="15"
+                      rows="8"
+                      placeholder="Message Here..."
+                    ></textarea>
                   </div>
                   <div class="submit-btn">
                     <a href="#" class="main-btn">
-                      <span class="btn-text">Download CV</span>
+                      <span class="btn-text">Submit</span>
                       <span class="btn-icon"
-                        ><i class="fas fa-download"></i
+                        ><i class="fa-regular fa-hand-pointer"></i
                       ></span>
                     </a>
                   </div>
