--- a/index.html
+++ b/index.html
@@ -464,6 +464,9 @@
         <i class="fa-solid fa-envelope-open"></i>
       </div>
     </div>
+    <div class="theme-btn">
+      <i class="fas fa-adjust"></i>
+    </div>
     <script src="./app.js"></script>
   </body>
 </html>
