--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio</title>
+    <title>naimulhasan.dev</title>
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -33,11 +33,7 @@
             Hi, I'm <span>Naimul Hasan Sabbir</span>
             A Software Engineer.
           </h1>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt
-            totam tenetur in itaque recusandae qui perspiciatis provident,
-            libero doloremque doloribus.
-          </p>
+          <p>Programmer | Web Developer | Python Trainer | Software Engineer</p>
           <div class="btn-con">
             <a href="" class="main-btn">
               <span class="btn-text">Download CV</span>
@@ -56,12 +52,14 @@
           <div class="left-about">
             <h4>Information About Me</h4>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis
-              perferendis quia cumque repellendus dolore temporibus, quas
-              commodi saepe quos. Voluptate molestiae placeat ex debitis cum
-              animi doloribus magnam recusandae itaque quae nihil fuga, ut
-              architecto eligendi perferendis nemo ullam iste quia cumque sit
-              eius nulla modi voluptatibus neque? Tempora, sapiente?
+              Hello! I'm Naimul Hasan Sabbir, a passionate software engineer. I
+              develop web applications, mobile applications, and desktop
+              applications. My core skill is based on Python and I love to do
+              most of the things using Python. I love to make the web more open
+              to the world. I have graduated with a bachelor's degree in
+              Computer Science Engineering from BRAC University at Dhaka,
+              Bangladesh in 2023. I am available for any kind of job opportunity
+              that suits my interests.
             </p>
             <div class="btn-con">
               <a href="#" class="main-btn">
@@ -73,7 +71,7 @@
           <div class="right-about">
             <div class="about-item">
               <div class="abt-text">
-                <p class="large-text">560+</p>
+                <p class="large-text">20+</p>
                 <p class="small-text">Projects <br />Completed</p>
               </div>
             </div>
@@ -85,14 +83,14 @@
             </div>
             <div class="about-item">
               <div class="abt-text">
-                <p class="large-text">560+</p>
-                <p class="small-text">Projects <br />Completed</p>
+                <p class="large-text">60+</p>
+                <p class="small-text">Programming <br />Students</p>
               </div>
             </div>
             <div class="about-item">
               <div class="abt-text">
-                <p class="large-text">560+</p>
-                <p class="small-text">Projects <br />Completed</p>
+                <p class="large-text">200+</p>
+                <p class="small-text">Teaching <br />Experience</p>
               </div>
             </div>
           </div>
@@ -163,10 +161,7 @@
             </div>
             <p class="tl-duration">2022 - Present</p>
             <h5>Software Engineer<span> - iTesseract Technologies</span></h5>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum,
-              veniam.
-            </p>
+            <p>Build and maintain the software applications of the company.</p>
           </div>
           <div class="timeline-item">
             <div class="tl-icon">
@@ -175,8 +170,8 @@
             <p class="tl-duration">2024 - Present</p>
             <h5>Python Trainer<span> - People N Tech</span></h5>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum,
-              veniam.
+              Trained students on learning Core Python programming language
+              concepts.
             </p>
           </div>
           <div class="timeline-item">
@@ -188,8 +183,8 @@
               Software Engineer Intern<span> - iTesseract Technologies</span>
             </h5>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum,
-              veniam.
+              Worked as an intern in the software development team and learned
+              the basics of software development.
             </p>
           </div>
         </div>
