--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           </h1>
           <p>Programmer | Web Developer | Python Trainer | Software Engineer</p>
           <div class="btn-con">
-            <a href="" class="main-btn">
+            <a href="./assets/cv.pdf" class="main-btn" download>
               <span class="btn-text">Download CV</span>
               <span class="btn-icon"><i class="fas fa-download"></i></span>
             </a>
@@ -62,7 +62,7 @@
               that suits my interests.
             </p>
             <div class="btn-con">
-              <a href="#" class="main-btn">
+              <a href="./assets/cv.pdf" class="main-btn" download>
                 <span class="btn-text">Download CV</span>
                 <span class="btn-icon"><i class="fas fa-download"></i></span>
               </a>
