--- a/index.html
+++ b/index.html
@@ -298,36 +298,72 @@
           </div>
           <div class="blogs">
             <div class="blog">
-              <img src="./img/blog1.jpg" alt="" />
+              <div class="blog-img-wrap">
+                <img src="./img/blog1.jpg" alt="" />
+              </div>
               <div class="blog-text">
+                <div class="blog-meta">
+                  <span class="blog-author"
+                    ><i class="fa fa-user"></i> Naimul</span
+                  >
+                  <span class="blog-date"
+                    ><i class="fa fa-calendar"></i> Apr 2025</span
+                  >
+                </div>
                 <h4>How To Create your Own Website</h4>
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. At
-                  nesciunt esse sit repellat excepturi consequatur sequi
-                  deserunt magni optio omnis.
+                  Learn the essential steps to build and launch your own modern
+                  website, from design to deployment.
                 </p>
+                <a href="#" class="blog-readmore"
+                  >Read More <i class="fa fa-arrow-right"></i
+                ></a>
               </div>
             </div>
             <div class="blog">
-              <img src="./img/blog2.jpg" alt="" />
+              <div class="blog-img-wrap">
+                <img src="./img/blog2.jpg" alt="" />
+              </div>
               <div class="blog-text">
-                <h4>How To Create your Own Website</h4>
+                <div class="blog-meta">
+                  <span class="blog-author"
+                    ><i class="fa fa-user"></i> Naimul</span
+                  >
+                  <span class="blog-date"
+                    ><i class="fa fa-calendar"></i> Mar 2025</span
+                  >
+                </div>
+                <h4>Top 10 Python Tips for Developers</h4>
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. At
-                  nesciunt esse sit repellat excepturi consequatur sequi
-                  deserunt magni optio omnis.
+                  Discover powerful Python tips and tricks to write cleaner,
+                  faster, and more efficient code.
                 </p>
+                <a href="#" class="blog-readmore"
+                  >Read More <i class="fa fa-arrow-right"></i
+                ></a>
               </div>
             </div>
             <div class="blog">
-              <img src="./img/blog3.jpg" alt="" />
+              <div class="blog-img-wrap">
+                <img src="./img/blog3.jpg" alt="" />
+              </div>
               <div class="blog-text">
-                <h4>How To Create your Own Website</h4>
+                <div class="blog-meta">
+                  <span class="blog-author"
+                    ><i class="fa fa-user"></i> Naimul</span
+                  >
+                  <span class="blog-date"
+                    ><i class="fa fa-calendar"></i> Feb 2025</span
+                  >
+                </div>
+                <h4>Mastering CSS Grid & Flexbox</h4>
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. At
-                  nesciunt esse sit repellat excepturi consequatur sequi
-                  deserunt magni optio omnis.
+                  A practical guide to mastering modern CSS layout techniques
+                  for responsive web design.
                 </p>
+                <a href="#" class="blog-readmore"
+                  >Read More <i class="fa fa-arrow-right"></i
+                ></a>
               </div>
             </div>
           </div>
